Conversion to client application

--- a/MyWallet-Client/src/main/resources/templates/index.html
+++ b/MyWallet-Client/src/main/resources/templates/index.html
@@ -35,6 +35,7 @@
 					<td style="height: 30px; width: 100px;">NAME</td>
 					<td style="height: 30px; width: 100px;">SURNAME</td>
 					<td style="height: 30px; width: 100px;">EMAIL</td>
+					<td style="height: 30px; width: 100px;">EXPENDITURES</td>
 					</tr>
 				</thead>
 				
@@ -45,6 +46,7 @@
 			            <td th:text="${user.name}"></td>
 			            <td th:text="${user.surname}"></td>
 			            <td th:text="${user.email}"></td>
+			            <td th:text="${user.expenditureList}"></td>
 			   		</tr>
 				</tbody>
 				
