--- a/MyWallet-Client/src/main/resources/templates/index.html
+++ b/MyWallet-Client/src/main/resources/templates/index.html
@@ -5,6 +5,20 @@
     <title>MyWallet</title>
     <link rel="stylesheet" href="/indexStyle.css" />
     
+    <script type = "text/javascript">
+    
+	    function updateExp(id, userId, money) {
+	    	
+	    
+	    		document.getElementById("id2").value = new Number(id);
+	    		document.getElementById("user_id2").value = new Number(userId);
+	    		document.getElementById("money2").value = new Number(money);
+	    	  
+	    	}
+	    
+	 
+    </script>
+    
 </head>
 <body>
 	<div class="container">
@@ -24,29 +38,31 @@
 				</ul>
 		</div>
 		<div class = "griditem3">				
-				   <h1 style="color:black;">Enter your next expenditure</h1><br>
+				   
    				
 					<form class = "formExpenditure" th:action="@{saveExpenditure}" th:object = "${expenditure}" method ="POST">
+					<h1 style="color:black;">Enter your next expenditure</h1><br>
 					<input type ="hidden" th:field = "*{id}"/>
 					
 							<font  color = black>User identification number</font><br>
-						<input type = "number" th:field = "*{user_id}" name="user_id" /><br><br>
+						<input type = "number" id ="user_id" name = "user_id"  /><br><br>
 						
 							<font color = black>Name of expenditure</font><br>
-						<input type = "text" th:field = "*{name}" th:value = "name"/><br><br>
+						<input type = "text" id ="name" name = "name" /><br><br>
 						
 							<font color = black>Money spent</font><br>
-						<input type = "number"  step="0.01" th:field = "*{money}" /><br><br>
+						<input type = "number"  step="0.01" id ="money" name = "money" /><br><br>
 						
 							<font color = black>Description</font><br>
-						<input type = "text" th:field = "*{description}"/><br><br>
+						<input type = "text" id ="description" name = "description"/><br><br>
 						
 						
-						<input type = "submit" value="Save" class="save">
+						<input type = "submit" value="Save expenditure">
 			
 					</form>
 					<br>
 		</div>
+		
 		
 		<div class = "griditem4">	
 			<table class="blueTable" style="vertical-align: top; height: 100px;">
@@ -64,18 +80,28 @@
 				
 				<tbody>
 				
-				    <tr th:each="expenditure : ${expenditureList}" th:href = "@{userPage/update}">
+				    <tr th:each="exp, expStat: ${expenditureList}" th:href = "@{userPage/update}">
 				    
-				    	
-			            <td th:text="${expenditure.id}"></td>
-			            <td th:text="${expenditure.name}"></td>
-			            <td th:text="${expenditure.money}"></td>
-			            <td th:text="${expenditure.description}"></td>
-			            <td th:text="${expenditure.user_id}"></td>
+			            <td th:text="${exp.id}"></td>
+			            <td th:text="${exp.name}"></td>
+			            <td th:text="${exp.money}"></td>
+			            <td th:text="${exp.description}"></td>
+			            <td th:text="${exp.user_id}"></td>
 			            <td>
-			            	<input type="button" value="Update" th:action="@{updateExpenditure}" th:object = "${expenditure}" /><br><br> 
+			            	<form th:action = "@{/setExpenditureToUpdate}" th:object = "${expenditure}">
+			            		<input type = "hidden" th:value = "${exp.id}" id="id" name = "id" />
+			            		<input type = "submit" value = "Update" />
+
+			            	</form>
+			            	
+			            	<form th:action = "@{/deleteExpenditure}" th:object = "${expenditure}">
+			            		<input type = "hidden" th:value = "${exp.id}" id="id" name = "id" />
+			            		<input type = "submit" value = "Delete" />
+
+			            	</form>
 			            </td>
 			   		</tr>
+			   		          
 				</tbody>
 				
 			</table>
