--- a/MyWallet-Client/src/main/resources/templates/userPage.html
+++ b/MyWallet-Client/src/main/resources/templates/userPage.html
@@ -3,25 +3,33 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>MyWallet</title>
-    <link rel="stylesheet" href="/userPageStyle.css" />
+    <link rel="stylesheet" href="css/userPageStyle.css" />
+    
+    
+<script src="/js/timeAndDate.js"></script>
     
 </head>
-<body>
+<body onload="getTime();">
 	<div class="container">
 		<div class = "griditem1">
 			<h1 style="color: #4485b8;">
 				<span style="background-color: #000000; color: #ffffff; padding: 0 200px;">My Wallet</span>
 			</h1>
 			<h4>User panel</h4>
+			<div class="square"></div>
 		</div>
 
 		<div class = "griditem2">		
-			  	<button onclick="history.back()">Go Back</button>
-		 				<br>		
-				<ul style = "color: #000000; font-weight: bold; ">
-					  <li><a href="/">Home</a></li>
-					  <li><a href="empty">About</a></li>
-				</ul>
+		
+				<br>
+   				<div id="clock" style="text-align: center"></div>
+   				
+   				<div id="date" style="text-align: center"></div><br>
+			  	
+				<a href="/">EXPENDITURES</a><br>
+				<a href="empty">ABOUT</a><br><br>
+
+				<button onclick="history.back()" style="align-items: center">BACK</button>	
 		</div>
 		<div class = "griditem3">				
 				   
@@ -46,7 +54,8 @@
 					</form>
 					<br>
 		</div>
-		<div class = "griditem4">				
+		<div class = "griditem4">	
+		<div class="square"></div>			
 			<table class="blueTable" style="vertical-align: top; height: 100px;">
 				
 				<thead>
