--- a/MyWallet-Client/src/main/resources/static/css/userPageStyle.css
+++ b/MyWallet-Client/src/main/resources/static/css/userPageStyle.css
@@ -63,35 +63,22 @@ table.blueTable tfoot .links a{
 
 .griditem1 { 
 			grid-area: header;
-			background-color: #E8EEF1;
 			text-align: center;
-			border-radius: 5px;
 			background: rgb(1,174,24);
 			background: linear-gradient(90deg, rgba(1,174,24,1) 0%, rgba(222,230,35,1) 51%, rgba(255,154,0,1) 100%);
  			}
 			
-.griditem2 { grid-area: left;
-			background-color: #8b8f8c; 
+.griditem2 { grid-area: left; 
 			text-align: left;
-			border-radius: 5px;
-			background: rgb(241,241,241);
-			background: linear-gradient(180deg, rgba(241,241,241,1) 0%, rgba(200,200,196,1) 49%, rgba(221,221,221,1) 100%);
 			}
 			
 
-.griditem3 { grid-area: center1;
-			background-color: #43B0F1; 
-			text-align: center;
-			border-radius: 5px;
-
-
-			
+.griditem3 { grid-area: center1; 
+			text-align: left;
 			}
 			
-.griditem4 { grid-area: center2;
-			background-color: #43B0F1; 
+.griditem4 { grid-area: center2; 
 			text-align: center;
-			border-radius: 5px;
 }
 				
 			
@@ -99,9 +86,14 @@ table.blueTable tfoot .links a{
   display: grid;
   grid-auto-flow: column;
   grid-template-areas: 	
-	  "header header header header header"
-	  "left center1 center1 center1 center1"
-	  "left center2 center2 center2 center2"
-	  "left center2 center2 center2 center2";
-	  background-color: #ed8a09;
+	  "header header header header header header header header header header"
+	  "left center1 center1 center1 center1 center1 center1 center1 center1 center1"
+	  "center2 center2 center2 center2 center2 center2 center2 center2 center2 center2"
+	  "center2 center2 center2 center2 center2 center2 center2 center2 center2 center2";
+	  background: linear-gradient(90deg, rgba(241,241,241,1) 0%, rgba(200,200,196,1) 49%, rgba(221,221,221,1) 100%);
 }
+
+.square {
+		  height: 5px;
+		  width: 100%;
+		  background-color: #000000;}
