--- a/MyWallet-Client/src/main/resources/templates/expenditureUpdatePage.html
+++ b/MyWallet-Client/src/main/resources/templates/expenditureUpdatePage.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="css/updatePageStyle.css" />
     
     
-    <script src="/js/timeAndDate.js"></script>
+    <script src="/js/setTimeAndDate.js"></script>
     
 </head>
-<body onload="getTime();">
+<body onload="setTimeAndDate();">
 	<div class="container">
 		<div class = "griditem1">
 			<h1 style="color: #4485b8;">
