--- a/MyWallet-Client/src/main/resources/static/css/indexStyle.css
+++ b/MyWallet-Client/src/main/resources/static/css/indexStyle.css
@@ -1,3 +1,7 @@
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
 
 
 table.blueTable {
@@ -86,21 +90,38 @@ form.formExpenditure {
 			text-align: left;}
 			
 			
-.griditem4 { grid-area: center3; 
+.griditem4 { grid-area: center2; 
 			text-align: center;}
-				
-.griditem5 { grid-area: center2; 
-			text-align: center;}			
 			
+				
+.griditem5 { grid-area: center3; 
+			 text-align: center;
+			}
+
+.griditem6 { grid-area: center4; 
+			 text-align: center;
+			 display: flex;
+			justify-content: center;
+			}
+			
+.griditem7 { grid-area: center5; 
+			 text-align: center;
+			 display: flex;
+			justify-content: center;
+			}		
+
+		
 			
 .container {
   display: grid;
   grid-auto-flow: column;
   grid-template-areas: 	
 	  "header header header header header header header header header header"
-	  "left center1 center2 center2 center2 center2 center2 center2 center2 center2"
-	  "center3 center3 center3 center3 center3 center3 center3 center3 center3 center3"
-	  "center3 center3 center3 center3 center3 center3 center3 center3 center3 center3";
+	  "left center1 center1 center1 center3 center3 center3 center3 center3 center3"
+	  "left center1 center1 center1 center4 center4 center4 center5 center5 center5"
+	  "left center1 center1 center1 center4 center4 center4 center5 center5 center5"
+	  "center2 center2 center2 center2 center2 center2 center2 center2 center2 center2"
+	  "center2 center2 center2 center2 center2 center2 center2 center2 center2 center2";
  background: linear-gradient(90deg, rgba(241,241,241,1) 0%, rgba(200,200,196,1) 49%, rgba(221,221,221,1) 100%);
 }
 
