--- a/MyWallet-Client/src/main/resources/templates/index.html
+++ b/MyWallet-Client/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 	<script src="/js/setDateToForm.js"></script>
 	<script src="/js/startFunctions.js"></script>
     <script src="/js/setStatistics.js"></script>
+    <script src="/js/createCharts.js"></script>
     
     <script th:inline="javascript">
     
@@ -27,63 +28,81 @@
     }
  
 	</script>
-    
-    
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+	
+	
 </head>
 <body onload="startFunctions();">
 	<div class="container">
 		<div class = "griditem1">
+		
+			<div class = "myWallet">
 			<h1 style="color: #4485b8;">
 				<span style="background-color: #000000; color: #ffffff; padding: 0 200px;">My Wallet</span>
 			</h1>
 			<h4>Manage your expenditures!</h4>
-			<div class="square"></div>
+			</div>
+			
+   			<div id="clockAndDate" class = "clockAndDate" ></div>
+   			
+   			
+   			<div class="square"></div>
 		</div>
 
 		<div class = "griditem2">	
 		
-				<br>
-   				<div id="clock" style="text-align: center"></div>
-   				
-   				<div id="date" style="text-align: center"></div><br>
-			  	
-				<a href="/userPage">USERS</a><br>
-				<a href="empty">ABOUT</a><br><br>
 
-				<button onclick="history.back()">BACK</button>	
+			  	
+			  	
+			  	<form action="/userPage">
+    				<input type="submit" value="User page" />
+				</form>	
+				
+				<!--<a href="/userPage">USERS</a><br>  -->
+				
+				<!--
+				<form action="/userPage">
+    				<input type="submit" value="User page" />
+				</form>
+				<a href="empty">ABOUT</a><br><br>  
+				-->
+				
+
+				<button onclick="history.back()">🡸</button>	
 		</div>
 		
 		<div class = "griditem3">				
 				   
    				
 					<form class = "formExpenditure" th:action="@{saveExpenditure}" th:object = "${expenditure}" method ="POST">
-						<h1 style="color:black;">Enter your next expenditure</h1><br>
+						<h2 style="color:black;">Enter next expenditure</h2>
 					
 						<input type ="hidden" th:field = "*{id}"/>
 					
-						<font color = black>User</font><br>
+						<font>User</font>
 						<select id ="user_id" name = "user_id">
 						    <option th:each="user : ${userList}" th:value="${user.id}" 
 						    th:text="${user.id} + ${' - '} + ${user.name} + ${' '} + ${user.surname} "></option>
-						</select><br><br>
+						</select>
 						
-							<font color = black>Name of expenditure</font><br>
-						<input type = "text" id ="name" name = "name" /><br><br>
+							<font class ="fontForm">Name of expenditure</font>
+						<input type = "text" id ="name" name = "name" />
 						
-							<font color = black>Money spent</font><br>
-						<input type = "number"  step="0.01" id ="money" name = "money" /><br><br>
+							<font class ="fontForm">Money spent</font>
+						<input type = "number"  step="0.01" id ="money" name = "money" />
 						
-							<font color = black>Category</font><br>
+							<font class ="fontForm">Category</font>
 						<select id ="category_id" name = "category_id">
 						    <option th:each="category : ${expenditureCategoryTab}" th:value="${category.id}"
 						     th:text="${category.id} + ${' - '} +${category.name}"></option>
-						</select><br><br>
+						</select>
 						
-							<font color = black>Date</font><br>
-						<input  type = "date" name = "date" id = "dateInput" /><br><br>
+							<font class ="fontForm">Date</font>
+						<input  type = "date" name = "date" id = "dateInput" />
 						
-							<font color = black>Description</font><br>
-						<input type = "text" id ="description" name = "description"/><br><br>
+							<font class ="fontForm">Description</font>
+						<input type = "text" id ="description" name = "description"/>
 						
 						
 						<input type = "submit" value="Save expenditure">
@@ -161,12 +180,18 @@
 			</table>
 		</div>
 		
+
+		<div class = "griditem5"  id = "tableMoneyByCategory"></div>
 		
-		<div class = "griditem5">	
-			<h1 style="color:black;">Statistics</h1>
+		<div class = "griditem6">
+			<canvas id="chartMoneyByCategory" style = " max-width:700px;  max-height:350px"></canvas>
 		</div>
-		<div class = "griditem6"  id = "tableMoneyByCategory"></div>
+		
 		<div class = "griditem7"  id = "tableMoneyByMonth"></div>
+		
+		<div class = "griditem8"  id = "tableMoneyByCategory">
+			<canvas id="chartMoneyByMonth" style = " max-width:700px;  max-height:350px"></canvas>
+		</div>
 </div>
 
 </body>
