Add login feature and fix user saving

--- a/MyWallet-Client/src/main/resources/templates/index.html
+++ b/MyWallet-Client/src/main/resources/templates/index.html
@@ -126,7 +126,7 @@
 				<input type = "submit" value="Ok">
 			</form>
 			
-			<form th:action="@{/}" >
+			<form th:action="@{/showExpenditures}" >
 				<input type = "submit" value="Reset">
 			</form>
 		
